--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@uploadthing/react": "^7.3.3",
     "autoprefixer": "10.4.22",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
     "marked": "^17.0.1",
     "mongodb": "^7.0.0",
@@ -26,6 +28,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-paystack": "^6.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
     "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
