--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
     "@tailwindcss/typography": "0.5.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/marked": "^5.0.2",
     "@uploadthing/react": "^7.3.3",
     "autoprefixer": "10.4.22",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "marked": "^17.0.1",
     "mongodb": "^7.0.0",
