--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/marked": "^5.0.2",
     "@uploadthing/react": "^7.3.3",
     "autoprefixer": "10.4.22",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
