--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
+    "@google-analytics/data": "^5.2.1",
+    "@next/third-parties": "^16.0.4",
     "@tailwindcss/typography": "0.5.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/marked": "^5.0.2",
@@ -31,7 +33,9 @@
     "postcss": "8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-paystack": "^6.0.0",
+    "recharts": "^3.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
