--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.20.0",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
+    "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.10",
     "postcss": "8.5.6",
     "react": "19.2.0",
