--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "worker:sync": "tsx scripts/cj-sync-worker.ts",
+    "worker:whatsapp-promo": "tsx scripts/whatsapp-promo-worker.ts"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
@@ -22,7 +24,9 @@
     "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "framer-motion": "^12.23.24",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "marked": "^17.0.1",
@@ -56,6 +60,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "4.1.17",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
